# aiot_2024_robot1

./: .gitignore  README.md
OpenCV/cppTest/: CMakeLists.txt  arucoMarker.cpp  bilateral.cpp  canny.cpp  color.cpp  colorInrange.cpp  corner.cpp  dnnmnist.cpp  drawLine.cpp  drawPoly.cpp  drawText.cpp  facecascade.cpp  filterEmbossing.cpp  gaussianBlur.cpp  helloOpenCV.cpp  histoEqualization.cpp  hog.cpp  hough.cpp  houghlineP.cpp  keypointMatching.cpp  knn.cpp  logical.cpp  main  mainclass.cpp  makefile  matOp.cpp  matOp2.cpp  mouse.cpp  perspectiveTransform.cpp  qrcode.cpp  saturated.cpp  splitMerge.cpp  threshold.cpp  vecOp.cpp  videoCaption.cpp  warpaffine.cpp
OpenCV/pythonTest/: drawPoly.py  helloOpencv.py  mouse.py  qrTest.py
aiot_ws/src/arith/: package.xml  setup.cfg  setup.py
aiot_ws/src/arith/arith/: argument.py  calculator.py  checker.py  operator.py
aiot_ws/src/arith/launch/: calculator.launch.py
aiot_ws/src/arith/param/: calculator.yaml  claculator.yaml
aiot_ws/src/arith_cpp/: CMakeLists.txt  package.xml
aiot_ws/src/arith_cpp/launch/: test.launch.py
aiot_ws/src/arith_cpp/src/arithmetic/: argument.cpp
aiot_ws/src/arith_cpp/src/calculator/: main.cpp
aiot_ws/src/homework/: package.xml  setup.py
aiot_ws/src/homework/homework/: mpub.py  msub.py  msub2.py  mtpub.py  mtsub.py
aiot_ws/src/move_turtle/: package.xml  setup.py
aiot_ws/src/move_turtle/launch/: aruco_launch.launch.py  display.launch.py  hlds_laser.launch.py  myrobot1.launch.py  robot_camera.launch.py  turtlebot3_state_publisher.launch.py  xacro_launch.py
aiot_ws/src/move_turtle/move_turtle/: arduino_lcd.py  arduino_led.py  arduino_servo.py  arduino_switch.py  follow_ar_marker.py  follow_wall.py  follow_wall_tf.py  follow_waypoints.py  follow_waypoints_loop.py  led_server.py  move_circle.py  move_rect.py  patrol_manipulator.py  servo_server.py  servo_sub.py
aiot_ws/src/move_turtle/param/: burger.yaml
aiot_ws/src/move_turtle/urdf/: macroed.urdf.xacro  myfirst.urdf  turtlebot3_burger.urdf  urdf.rviz  visual.urdf
aiot_ws/src/move_turtle_cpp/: CMakeLists.txt  package.xml
aiot_ws/src/move_turtle_cpp/src/: canny.cpp  hello_moveit.cpp
aiot_ws/src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
aiot_ws/src/ros2env/: package.xml  setup.py
aiot_ws/src/ros2env/ros2env/command/: env.py
aiot_ws/src/ros2env/ros2env/verb/: __init__.py  list.py  set.py
aiot_ws/src/simpleRos/: package.xml  setup.py
aiot_ws/src/simpleRos/simpleRos/: hello.py
aiot_ws/src/simple_ros/: setup.py
aiot_ws/src/simple_ros/launch/: hello.launch.py  moveturtle.launch.py  moveturtle_time.launch.py  parameter.launch.py  service_test.launch.py  two_turtle.launch.py
aiot_ws/src/simple_ros/param/: simple_parameter.yaml  simple_parameter2.yaml  turtlesim.yaml
aiot_ws/src/simple_ros/simple_ros/: action_client.py  action_server.py  deadline.py  hello.py  hello_class.py  hello_pub.py  hello_sub.py  lifespan.py  logging_example.py  move_turtle.py  move_turtle_ns.py  move_turtle_time.py  move_turtle_time_ns.py  service_client.py  service_server.py  service_server_int.py  simple_parameter.py  simple_parameter2.py  time_pub.py  user_int_pub.py
aiot_ws/src/simple_ros_cpp/: CMakeLists.txt  package.xml
aiot_ws/src/simple_ros_cpp/include/composition/: listener_component.hpp  talker_component.hpp
aiot_ws/src/simple_ros_cpp/include/image_pipeline/: camera_node.hpp  watermark_node.hpp
aiot_ws/src/simple_ros_cpp/include/image_pipline/: camera_node.hpp  image_view_node.hpp
aiot_ws/src/simple_ros_cpp/include/simple_ros_cpp/: hello_pub_class.hpp
aiot_ws/src/simple_ros_cpp/launch/: action_test_int.launch.py  hello_opencv.launch.py  lifecycle_demo.launch.py  moveturtle.launch.py  service_test.launch.py  service_test_int.launch.py  tf_turtle.launch.py
aiot_ws/src/simple_ros_cpp/src/: action_client.cpp  action_server.cpp  cyclic_pipline.cpp  dynamic_tf.cpp  dynamic_tf2.cpp  follow_turtle_tf.cpp  hello_pub.cpp  hello_pub_class.cpp  hello_pub_class_method.cpp  hello_pub_lambda.cpp  hello_sub.cpp  hello_sub_opencv.cpp  image_pipeline_all_in_one.cpp  lifecycle_listener.cpp  lifecycle_service_client.cpp  lifecycle_service_client_thread.cpp  lifecycle_talker.cpp  listener_component.cpp  logging_example.cpp  manual_composition.cpp  move_turtle.cpp  pub_default.cpp  publish_map_with_lidar.cpp  service_client.cpp  service_client_int.cpp  service_server.cpp  two_node_pipline.cpp
aiot_ws/src/simple_ros_cpp/src/launch/: hello.launch.cpp
aiot_ws/src/tb_interface/: CMakeLists.txt  package.xml
aiot_ws/src/user_interface/: CMakeLists.txt  package.xml
arduino_project/lcd/: lcd.ino
arduino_project/led/: led.ino
arduino_project/servo/: servo.ino
arduino_project/switch/: switch.ino
artificial_intelligence/: a01_numpy.py  a02_boolindex.py  a03_broadcasting.py  a04_Dot.py  a05_fancyindexing.py  a06_pandas.py  a07_datafraem.py  a08_linear_egrex.py  a09_logistic_regrex.py  default.py
artificial_intelligence/data/: iris_predict.tab
python/: a01_keyword.py  a02_nametest.py  a03_variable_name.py  a04_operator_overriding.py  a05_print_test.py  a06_data_type.py  a07_str_indexing.py  a08_lenth_test.py  a09_int_float.py  a10_variable_definition.py  a11_operator2.py  a12_input_test.py  a13_str_format.py  a14_string_method.py  a15_booleen.py  a16_find_method.py  a17_condition_if.py  a18_datetime.py  a19_weather.py  a20_odd.py  a21_score_print.py  a22_number_analysis.py  a23_list_test.py  a24_list_test2.py  a25_range_for.py  a26_dictionary_test.py  a27_dictionary_test2.py  a28_dictionary_test3.py  a29_while_test.py  a30_list_function.py  a31_enumerate.py  a32_function_test1.py  a33_function_test2.py  a34_exception.py  a35_module_test.py  a36_class_dic.py  a37_class_makedic.py  a38_class_student.py  a39_class_dataclass.py  a40_class_method.py  (+17 more)
python/data/: basic.txt
python/module_basic/: main.py  test_module.py
python/package_basic/: main.py
python/package_basic/test_package/: __init__.py
파이선 강의자료/: 파이썬_01_03.pptx
